--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -21,17 +21,10 @@ android {
     }
 }
 
-repositories {
-    maven {
-        url  "https://dl.bintray.com/lostinireland/Pinyin-TextView"
-    }
-}
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-
-    implementation 'com.blackjade.pinyintextview:pinyintextview:1.0.0'
+    implementation project(":pinyintextview")
 }
